yaml_files/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: venreg.azurecr.io/venimage:2
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
              path: /management/health/liveness
              port: http
        readinessProbe:
          httpGet:
              path: management/health/readiness
              port: http
          initialDelaySeconds: 5
          periodSeconds: 5

        volumeMounts:
        - mountPath: /var/www/html/foo
          name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: my-azurefile
